# RobotAdvisorProject

PricingLib/: .gitignore  Dockerfile  docker-compose.yml  install.ps1  pyproject.toml  test.py  test_bbg.py
PricingLib/Exotics/: README_tests.md  dayCountConv.py  exotics.py  exotics_functional.py  monte_carlo.py  mt_numba_bench.py  test_exotics.py  test_exotics_functional.py
PricingLib/Options/: barone_adesi_whaley.py  black76.py  (+2 more)
PricingLib_old/: README.md  activate.ps1  main.py  requirements.txt
RobotAdvisor/: .gitignore  activate.ps1  main.py  requirements.txt  upgrade.ps1
Statistics/: app.py
data-engineering-playground/: pyproject.toml  requirements.txt
data-engineering-playground/config/: database.yaml
data-engineering-playground/docker/: docker-compose.yml
data-engineering-playground/scripts/: load_sample_data.py  setup_db.py
data-engineering-playground/src/: dockerfile  main.py
data-engineering-playground/src/database/: connection.py  schema.py
data-engineering-playground/src/etl/: extractors.py  loaders.py  transformers.py
data-engineering-playground/src/utils/: logger.py
machine-learning/: pyproject.toml
options/: AAPL_options_2025-05-13.json  AAPL_options_raw.json  MSFT_options_2025-05-13.json  NVDA_options_2025-05-13.json  TSLA_options_2025-05-13.json  alpha_test.py  historical_options_demo.py  main.py  main_updated.py  my_database.db  my_database.duckdb  pyproject.toml  update_database.py
posgresTest/: XNAS_FILE.csv  docker-compose.yml  dockerfile  import.py  pyproject.toml  setup.sh
yield_curve_db/: docker-compose.yml  dockerfile  main.py  pyproject.toml  test.py
(+53 files in other folders)
